# prime_finder

./: .gitignore  CMakeLists.txt  README.md  main.cpp  prime
inc/: prime_finders.h  prime_finders_c.h
src/: prime_finders.cpp  prime_finders_c.cpp
